Implemented Newsletter API documentation
