# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\api\NewsletterController;
+use App\Models\Newsletter;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -19,4 +20,9 @@ use Illuminate\Support\Facades\Route;
 //     return $request->user();
 // });
 
+Route::get('newsletters', [NewsletterController::class, 'newslettersIndex']);
+Route::get('newsletters/{NewsletterID}', [NewsletterController::class, 'newslettersShow']);
+Route::post('newsletters', [NewsletterController::class, 'newslettersStore']);
+Route::put('newsletters/{NewsletterID}', [NewsletterController::class, 'newslettersUpdate']);
+Route::delete('newsletters/{NewsletterID}', [NewsletterController::class, 'newslettersDelete']);
 Route::get('newsletters/lastfive', [NewsletterController::class, 'lastFiveNewsletters']);
